<resources>
    <string name="app_name">e-Szivacs</string>
    <string name="creater">by Boa</string>

    <string name="evaluation_title">Evaluation</string>


    <string name="userinfo_name">Name: %1$s</string>
    <string name="userinfo_teacher">Teacher: %1$s</string>
    <string name="userinfo_institution">Institution: %1$s</string>


    <string name="accept_message">This is a nonprofit client app for the e-Kréta system. Because the app <b>was not made by eKRÉTA Informatikai Zrt.</b>, if you have questions about this app please <b>do not use their customer service</b>, just write us an email:  <u>eszivacs@gmail.com</u></string>
    <string name="accept_button">Accept</string>
    <string name="login_name">Username</string>
    <string name="login_password">Password</string>
    <string name="login_school">School</string>
    <string name="login_sign_in">Login</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="title_activity_lessons">Lessons</string>
    <string name="title_activity_student">Student</string>
    <string name="title_activity_lessons_list">Lessons</string>
    <string name="title_activity_absents">Absents</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_event">Events</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="title_activity_evaluations">Evaluations</string>

    <string name="title_menu_share">Share</string>
    <string name="title_menu_send">Feedback</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data and sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string-array name="pref_sync_frequency_titles">
        <item>Normal</item>
        <item>Dark</item>
        <!--<item>Black</item>-->
        <!--<item>PH</item>-->
        <!--<item>Blue</item>-->
        <!--<item>Green</item>-->
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_evaluation_list">Evaluations</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>

    <string name="day_mon">Monday</string>
    <string name="day_tue">Tuesday</string>
    <string name="day_wed">Wednesday</string>
    <string name="day_thu">Thursday</string>
    <string name="day_fri">Friday</string>


    <string name="delete_kreta_string">Delete kréta</string>
    <string name="title_activity_changelog">Changelog</string>
    <string name="title_activity_ha_kapnek_egy">Ha kapnék egy...</string>

</resources>
